--- a/contents/viewer/_config.yaml
+++ b/contents/viewer/_config.yaml
@@ -2,5 +2,5 @@ description: ''
 exclude: [images]
 order: [index.rst, product, demo, tech, biz]
 theme: default.html
-theme_base: /themes/viewer
+theme_base: http://download.zopen.cn/themes/viewer
 title: 易度
