修改配置文件

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 parts = main
         wsgi
 develop = ../zcms/
+index = http://pypi.douban.com/simple/
 
 [main]
 recipe = zc.recipe.egg
@@ -9,6 +10,7 @@ interpreter = python
 dependent-scripts = true
 eggs =
        zcms
+       pyramid<=1.4.4
 scripts = pserve
           pshell
 
