修改文件夹路径

--- a/contents/viewer/_config.yaml
+++ b/contents/viewer/_config.yaml
@@ -2,6 +2,6 @@ description: 在线查看文档服务
 exclude: [images]
 order: [index.rst, product, demo, tech, biz]
 theme: default.html
-theme_base: /themes/bootstrap
+theme_base: /themes/viewer-bootstrap
 title: 易度云查看：在线查看文档最佳解决方案-易度云办公旗下网站
 domain_name: viewer.everydo.com
